cluster-bootstrap/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: kube-prometheus-stack-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.dev.dev-denny.cloudns.be`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
