cluster-bootstrap/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`argocd.dev.dev-denny.cloudns.be`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
